[gd_scene load_steps=8 format=3 uid="uid://b16u71svnhx5p"]

[ext_resource type="Texture2D" uid="uid://e15fnerb8nlc" path="res://assets/Hull_01.png" id="1_5dtfl"]
[ext_resource type="Script" uid="uid://m0qteuj2x0r4" path="res://scripts/player.gd" id="1_k0j43"]
[ext_resource type="Texture2D" uid="uid://bm4iwx574oqu" path="res://assets/Gun_01 (2).png" id="2_k0j43"]
[ext_resource type="Texture2D" uid="uid://cjmnqmyyosvhk" path="res://assets/Track_4_A.png" id="4_ghwbr"]
[ext_resource type="Texture2D" uid="uid://c1yd1tbsk5yvl" path="res://assets/Track_4_B.png" id="5_t18lt"]

[sub_resource type="SpriteFrames" id="SpriteFrames_ghwbr"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_ghwbr")
}, {
"duration": 1.0,
"texture": ExtResource("5_t18lt")
}],
"loop": true,
"name": &"left",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mpffw"]
size = Vector2(96, 128)

[node name="player" type="Area2D"]
script = ExtResource("1_k0j43")

[node name="hull" type="Sprite2D" parent="."]
scale = Vector2(0.5, 0.5)
texture = ExtResource("1_5dtfl")
metadata/_edit_lock_ = true

[node name="weapon" type="Sprite2D" parent="."]
position = Vector2(0, -8)
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_k0j43")
metadata/_edit_lock_ = true

[node name="r_wheels" type="AnimatedSprite2D" parent="."]
show_behind_parent = true
position = Vector2(28, 2.21)
scale = Vector2(0.952381, 0.538293)
sprite_frames = SubResource("SpriteFrames_ghwbr")
animation = &"left"
metadata/_edit_lock_ = true

[node name="l_wheels" type="AnimatedSprite2D" parent="."]
show_behind_parent = true
position = Vector2(-28, 2.21)
scale = Vector2(0.952381, 0.538293)
sprite_frames = SubResource("SpriteFrames_ghwbr")
animation = &"left"
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_mpffw")
metadata/_edit_lock_ = true

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
